--- a/app/documents/styles.css
+++ b/app/documents/styles.css
@@ -1,4 +1,17 @@
-
+ #top {
+    background-color: #990000; 
+    text-align: left;
+    width: 100%; 
+    height: 50px; }
+            
+ #wrap {
+	width: 1000px;
+	background-color: #FFFFFF;
+	margin:0 auto;
+	margin-top: 40px;
+	margin-bottom: 80px;
+	background-image: none;
+}
 	
 	a:link
 	{
