--- a/app/documents/styles.css
+++ b/app/documents/styles.css
@@ -69,6 +69,17 @@
 	.docBox
 	{
 		border: 1px solid #000000;
+		background-image: url(http://sangerpapers.org/sanger/images/docbg.jpg);
+		padding: 20px;
+	}
+	
+	.docBody
+	{
+		font-family: Arial, Helvetica, sans-serif;
+		font-size: 14px;
+		color: #000000;
+	{
+		border: 1px solid #000000;
 		background-image: url(../images/docbg.jpg);
 		padding: 20px;
 	}
