--- a/app/documents/styles.css
+++ b/app/documents/styles.css
@@ -68,9 +68,10 @@
 	
 	.docBox
 	{
-		border: 1px solid #000000;
-		background-image: url(http://sangerpapers.org/sanger/images/docbg.jpg);
-		padding: 20px;
+	border: 1px solid #000000;
+	background-image: url(http://sangerpapers.org/sanger/app/images/docbg.jpg);
+	padding: 20px;
+	
 	}
 	
 	.docBody
@@ -78,17 +79,7 @@
 		font-family: Arial, Helvetica, sans-serif;
 		font-size: 14px;
 		color: #000000;
-	{
-		border: 1px solid #000000;
-		background-image: url(../images/docbg.jpg);
-		padding: 20px;
-	}
 	
-	.docBody
-	{
-		font-family: Arial, Helvetica, sans-serif;
-		font-size: 14px;
-		color: #000000;
 	}
 	
 	.docTitle
